--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -53,7 +53,7 @@ span.divider-dark {
 }
 
 .section-padding {
-    padding: 130px 0;
+    padding: 40px 0;
 }
 
 .section-padding-work {
@@ -890,6 +890,7 @@ blockquote .small, blockquote footer, blockquote small {
 }
 
 .badge {
+    margin-top: -4px;
     font-family: 'Montserrat';
     padding: 4px 4px;
     font-size: 12px;
@@ -1022,6 +1023,10 @@ blockquote .small, blockquote footer, blockquote small {
 #contact-information h5 {
     color: #686868;
     font-size: 14px;
+}
+
+.contact-text{
+    text-align: center;
 }
 
 /* =Media Queries
