--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -312,7 +312,7 @@ a:focus {
     font-size: 36px;
     line-height: 50px;
     width: 50px;
-    padding: 5px 0px 0px 0px;
+    padding: 15px 0px;
 
 }
 
